issue index heading align

--- a/sass/layout/_issue-index.scss
+++ b/sass/layout/_issue-index.scss
@@ -21,7 +21,7 @@ $disc-bg-2: lighten($pale-hot, 10%);
     @include sans;
     margin: 0 0 0.75rem 0;
     position: absolute;
-    top: -3.5rem;
+    top: -4.5rem;
     left: 0;
     font-size: calc(150% + #{$scale-value});
   }
